@@ -16,7 +16,7 @@ RSNAMES_C = basic_query.c games.c cocitation.c iterators.c \
 	igraph_grid.c atlas.c topology.c motifs.c progress.c \
 	operators.c interrupt.c igraph_psumtree.c array.c \
 	igraph_hashtable.c foreign-graphml.c flow.c igraph_buckets.c \
-        spectral_properties.c
+        spectral_properties.c cores.c
 
 RSNAMES_CPP = NetDataTypes.cpp clustertool.cpp NetRoutines.cpp \
 	pottsmodel_2.cpp
