@@ -84,7 +84,8 @@ export(subgraph, simplify, degree, degree.distribution, diameter,
        get.shortest.paths, average.path.length, transitivity,
        get.all.shortest.paths, get.diameter, farthest.nodes,
        graph.laplacian, constraint, page.rank, reciprocity, rewire,
-       graph.density, neighborhood.size, neighborhood, graph.neighborhood)
+       graph.density, neighborhood.size, neighborhood, graph.neighborhood,
+       graph.kcores)
 
 # plotting
 
