@@ -1,3 +1,8 @@
+2006-12-30  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (graph.kcores: added
+	* interfaces/R/src/rinterface.c (R_igraph_k_cores) : added
+
 2006-12-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/games.R (connect.neighborhood) : added
